--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "gh-pages": "^6.3.0"
+    "gh-pages": "^6.3.0",
+    "honkit-plugin-prism": "^2.5.3",
+    "prism-themes": "^1.9.0"
   }
 }
