--- a/package.json
+++ b/package.json
@@ -5,13 +5,25 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "gh-pages -d _book"
+    "deploy": "gh-pages -d _book",
+    "serve": "honkit serve",
+    "build": "honkit build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "gh-pages": "^6.3.0",
+    "gitbook-plugin-anchor-navigation-ex": "^1.0.14",
+    "gitbook-plugin-back-to-top-button": "^0.1.4",
+    "gitbook-plugin-code": "^0.1.0",
+    "gitbook-plugin-collapsible-chapters": "^0.1.8",
+    "gitbook-plugin-fontsettings": "^2.0.0",
+    "gitbook-plugin-page-toc": "^1.1.1",
+    "gitbook-plugin-prism": "^2.4.0",
+    "gitbook-plugin-search-plus": "^1.0.4-alpha-3",
+    "gitbook-plugin-splitter": "^0.0.8",
+    "honkit": "^6.0.3",
     "honkit-plugin-prism": "^2.5.3",
     "prism-themes": "^1.9.0"
   }
